# Copyright 2020 The XLS Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(":cc_so_library.bzl", "cc_so_library")

py_binary(
    name = "print_libpython_path",
    srcs = ["print_libpython_path.py"],
    python_version = "PY3",
    srcs_version = "PY3",
)

genrule(
    name = "embdedded_python_interpreter_symlink",
    outs = ["embedded_python_interpreter.so.link"],
    cmd = "ln -s \"$$($(location :print_libpython_path))\" $@",
    exec_tools = [":print_libpython_path"],
)

# C binaries that embed a Python interpreter can depend on this library to get
# access to the Python symbols. This target uses libpython from the Python
# interpreter that is used by Bazel.
cc_so_library(
    name = "embedded_python_interpreter",
    src = "embedded_python_interpreter.so.link",
    visibility = ["//visibility:public"],
)
