# Copyright 2020 The XLS Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Description:
#   A BUILD file for gperf, a perfect hash function generator.

licenses(["restricted"])  # GPLv3

load("@com_google_xls//dependency_support:copy.bzl", "copy")
load("@com_google_xls//dependency_support:pseudo_configure.bzl", "pseudo_configure")

exports_files(["COPYING"])

cc_library(
    name = "gperf_includes",
    textual_hdrs = glob([
        "src/*.icc",
    ]),
)

cc_binary(
    name = "gperf",
    srcs = glob([
        "lib/*.cc",
        "lib/*.h",
        "src/*.cc",
        "src/*.h",
    ]) + [
        "src/config.h",
    ],
    deps = [":gperf_includes"],
    includes = ["lib", "src"],
    copts = [
        "-Wno-register",
        "-Wno-strict-aliasing",
    ],
    output_licenses = ["unencumbered"],
    visibility = ["//visibility:public"],
)

pseudo_configure(
    name = "config_h",
    src = "src/config.h.in",
    out = "src/config.h",
    defs = [],
    mappings = {'HAVE_DYNAMIC_ARRAY': '0', 'PACKAGE_BUGREPORT': '""', 'PACKAGE_NAME': '""', 'PACKAGE_STRING': '""', 'PACKAGE_TARNAME': '""', 'PACKAGE_VERSION': '""'},
)
