# Copyright 2025 The XLS Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Load proto_library
# cc_proto_library is used in this file

proto_library(
    name = "profile_proto",
    srcs = ["proto/profile.proto"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "profile_cc_proto",
    deps = [":profile_proto"],
    visibility = ["//visibility:public"],
)
